--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "node-red" : {
     "version": ">=2.0.0",
     "nodes": {
-      "flowhubget":    "nodes/90-flowhub-get.js",
+      "flowhubpull":   "nodes/90-flowhub-pull.js",
       "flowhubpush":   "nodes/91-flowhub-push.js"
     }
   },
