--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name" : "@gregoriusrippenstein/node-red-contrib-flowhub",
-  "version": "0.0.2",
+  "version": "0.0.5",
   "dependencies": {
+    "got": "latest"
   },
 
   "keywords": [
@@ -12,7 +13,7 @@
   "license": "SEE LICENSE IN https://github.com/gorenje/node-red-contrib-flowhub/blob/main/LICENSE",
   "author": "Gerrit Riessen <nodered@spreads-the.love> (https://spread-the.love)",
   "engines": {
-    "node": ">=8"
+    "node": ">=16"
   },
 
   "node-red" : {
