fix the got version to 13 since 14 only supports node v20 or above

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@gregoriusrippenstein/node-red-contrib-flowhub",
   "version": "0.4.4",
   "dependencies": {
-    "got": "latest"
+    "got": "~13"
   },
   "keywords": [
     "node-red",
