added token check

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "collaborative",
     "flow-development"
   ],
-  "homepage": "https://github.com/gorenje/node-red-contrib-flowhub#README.md",
+  "homepage": "https://flowhub.org/f/4a831589774ecb04",
   "license": "Don't be Evil.",
   "author": "Gerrit Riessen <nodered@spreads-the.love> (https://spread-the.love)",
   "engines": {
